updating index.js add some helpful comments

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,6 @@
+#Database url
+DATABASE_URL=mongodb://localhost:27017/portfolio
+
+#Dashboard env var
 DASHBOARD_EMAIL=aidi360omar@gmail.com
 DASHBOARD_PASSWORD=@B7wL!f3p$9XmQ^t1
