add update Api to  tech stack items  feature to dashboard

--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,6 @@
 DATABASE_URL=mongodb://localhost:27017/portfolio
 
 #Dashboard env var
+#Login var
 DASHBOARD_EMAIL=aidi360omar@gmail.com
 DASHBOARD_PASSWORD=@B7wL!f3p$9XmQ^t1
