building for hosting

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 #Database url
 DATABASE_URL=mongodb://localhost:27017/portfolio
 
+BASE_URL="http://localhost:3000/"
 #Dashboard env var
 #Login var
 DASHBOARD_EMAIL=aidi360omar@gmail.com
