--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 #Database url
 DATABASE_URL=mongodb://localhost:27017/portfolio
 
-BASE_URL="http://localhost:3000/"
+BASE_URL="mongodb+srv://aidi360omar:<db_password>@cluster0.mqo11qs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 #Dashboard env var
 #Login var
 DASHBOARD_EMAIL=aidi360omar@gmail.com
