--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 #Database url
-DATABASE_URL=mongodb+srv://aidi360omar:<db_password>@cluster0.mqo11qs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL=mongodb+srv://aidi360omar:2eiJDnpptmjeE2xg@cluster0.mqo11qs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 #Dashboard env var
 #Login var
