--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.3",
     "use-local-storage": "^3.0.0",
     "validator": "^13.12.0"
   },
