--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 #Database url
-DATABASE_URL=mongodb+srv://aidi360omar:yzEzvt8mYFRqMx2D@cluster0.mqo11qs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL=mongodb+srv://aidi360omar:yzEzvt8mYFRqMx2D@cluster0.mqo11qs.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 #Dashboard env var
 #Login var
 DASHBOARD_EMAIL=aidi360omar@gmail.com
